<resources>
    <string name="app_name">Maktabah YARSI</string>
    <string name="maktabah_yarsi_splash">مكتبة يرسي \t\nMaktabah YARSI</string>
    <string name="maktabah_arab">مكتبة يرسي</string>
    <string name="adab_murid_terhadap_diri_sendiri">Adab Murid Terhadap Diri Sendiri</string>
    <string name="gratis">Gratis</string>
    <string name="syafri_m_noor_lc">Syafri M, Noor, Lc</string>
    <string name="akhlak">Akhlak</string>
    <string name="desc_3">Tingkatkan Pengetahuan kamu pakai <![CDATA[<b><font color=#10b981>Maktabah YARSI</font></b>]]></string>
    <string name="desc_2">Kamu bisa akses semua buku dan baca tanpa batas</string>
    <string name="desc_1">Ga perlu ke perpustakaan lagi, kamu bisa buka Pake Gadget kamu</string>
    <string name="lewati">Lewati</string>
    <string name="email_invalid_format">Harap masukkan email yang valid</string>
    <string name="password_invalid_format">Password kurang dari 5 karakter</string>
    <string name="username_invalid_format">Username kurang dari 5 karakter</string>
    <string name="guest_login">Guest Login</string>
    <string name="tidak_punya_akun">Tidak punya akun?</string>
    <string name="sign_up">Daftar</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="google">Google</string>
    <string name="or_login_with">or login with</string>
    <string name="login">Masuk</string>
    <string name="password">Kata sandi</string>
    <string name="email_address">Alamat email</string>
    <string name="desc_login">Masukkan email dan password kamu supaya kamu bisa akses semua semua buku yang ada di aplikasi ini ya!</string>
    <string name="welcome_desc_login">Welcome back ya</string>
    <string name="hallo_login">Hallo</string>
    <string name="username">Nama pengguna</string>
    <string name="desc_register">Kamu sudah punya akun belum? kalo belum daftar dulu ya dibawah ini!</string>
    <string name="assalamualaikum">Assalamualaikum</string>
    <string name="or_sign_up_with">Atau daftar dengan</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="error_field_empty">Data ini tidak boleh kosong!</string>
    <string name="web_client_id">1065446694283-en18jq76rp96g21qd2dka4l4tvikhi2i.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category_buku_format">%s Buku</string>
    <string name="kategori">Kategori</string>
    <string name="lainnya_category">Lainnya</string>
    <string name="halaman">%1$s Halaman</string>
    <string name="halaman_kata">Halaman %1$s</string>
    <string name="tab_text_1">Buku</string>
    <string name="tab_text_2">Kata</string>
</resources>