<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".ui.register.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_hallo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/hallo_login"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_welcome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/assalamualaikum"
            android:textColor="@color/primary_500"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/tv_hallo"
            app:layout_constraintStart_toStartOf="@id/tv_hallo"
            app:layout_constraintTop_toBottomOf="@id/tv_hallo" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/desc_register"
            android:textColor="@color/neutral_500"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/tv_welcome"
            app:layout_constraintStart_toStartOf="@id/tv_welcome"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/username"
            android:textColor="@color/neutral_950"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/tv_desc"
            app:layout_constraintStart_toStartOf="@id/tv_desc"
            app:layout_constraintTop_toBottomOf="@id/tv_desc" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_username"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:showDividers="none"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:expandedHintEnabled="false"
            app:hintAnimationEnabled="false"
            app:layout_constraintEnd_toEndOf="@id/tv_username"
            app:layout_constraintStart_toStartOf="@id/tv_username"
            app:layout_constraintTop_toBottomOf="@id/tv_username"
            app:placeholderText="maktabahyarsi2023"
            app:placeholderTextAppearance="@style/PlaceholderTextAppearance"
            app:placeholderTextColor="@color/neutral_500">

            <com.maktabah.maktabahyarsi.utils.customview.CustomAuthTextInputEditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:textAppearance="@style/PlaceholderTextAppearance" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/email_address"
            android:textColor="@color/neutral_950"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/til_username"
            app:layout_constraintStart_toStartOf="@id/til_username"
            app:layout_constraintTop_toBottomOf="@id/til_username" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:showDividers="none"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:expandedHintEnabled="false"
            app:hintAnimationEnabled="false"
            app:layout_constraintEnd_toEndOf="@id/tv_email"
            app:layout_constraintStart_toStartOf="@id/tv_email"
            app:layout_constraintTop_toBottomOf="@id/tv_email"
            app:placeholderText="hello@example.c"
            app:placeholderTextAppearance="@style/PlaceholderTextAppearance"
            app:placeholderTextColor="@color/neutral_500">

            <com.maktabah.maktabahyarsi.utils.customview.CustomAuthTextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:textAppearance="@style/PlaceholderTextAppearance" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/password"
            android:textColor="@color/neutral_950"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/til_email"
            app:layout_constraintStart_toStartOf="@id/til_email"
            app:layout_constraintTop_toBottomOf="@id/til_email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:showDividers="none"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:expandedHintEnabled="false"
            app:hintAnimationEnabled="false"
            app:layout_constraintEnd_toEndOf="@id/tv_password"
            app:layout_constraintStart_toStartOf="@id/tv_password"
            app:layout_constraintTop_toBottomOf="@id/tv_password"
            app:passwordToggleEnabled="true"
            app:placeholderText="●●●●●●●●●●●●●●"
            app:placeholderTextAppearance="@style/PlaceholderTextAppearance"
            app:placeholderTextColor="@color/neutral_500">

            <com.maktabah.maktabahyarsi.utils.customview.CustomAuthTextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textAppearance="@style/PlaceholderTextAppearance" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_confirm_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/confirm_password"
            android:textColor="@color/neutral_950"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/til_password"
            app:layout_constraintStart_toStartOf="@id/til_password"
            app:layout_constraintTop_toBottomOf="@id/til_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_confirm_password"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:showDividers="none"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:expandedHintEnabled="false"
            app:hintAnimationEnabled="false"
            app:layout_constraintEnd_toEndOf="@id/tv_confirm_password"
            app:layout_constraintStart_toStartOf="@id/tv_confirm_password"
            app:layout_constraintTop_toBottomOf="@id/tv_confirm_password"
            app:passwordToggleEnabled="true"
            app:placeholderText="●●●●●●●●●●●●●●"
            app:placeholderTextAppearance="@style/PlaceholderTextAppearance"
            app:placeholderTextColor="@color/neutral_500">

            <com.maktabah.maktabahyarsi.utils.customview.CustomAuthTextInputEditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textAppearance="@style/PlaceholderTextAppearance" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/sign_up"
            android:textSize="16sp"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="@+id/til_confirm_password"
            app:layout_constraintStart_toStartOf="@+id/til_confirm_password"
            app:layout_constraintTop_toBottomOf="@+id/til_confirm_password" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/div1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_sign_up"
            app:layout_constraintEnd_toStartOf="@id/tv_sign_up"
            app:layout_constraintStart_toStartOf="@id/btn_register"
            app:layout_constraintTop_toBottomOf="@id/btn_register" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/div2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_sign_up"
            app:layout_constraintEnd_toEndOf="@id/btn_register"
            app:layout_constraintStart_toEndOf="@id/tv_sign_up"
            app:layout_constraintTop_toBottomOf="@id/btn_register" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/or_sign_up_with"
            android:textAlignment="center"
            android:textColor="@color/neutral_500"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/div2"
            app:layout_constraintStart_toEndOf="@id/div1"
            app:layout_constraintTop_toBottomOf="@id/btn_register" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register_google"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/neutral_50"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:outlineProvider="background"
            android:text="@string/google"
            android:textAlignment="center"
            android:textColor="@color/neutral_950"
            android:textSize="12sp"
            app:cornerRadius="8dp"
            app:icon="@drawable/google_logo"
            app:iconGravity="textStart"
            app:iconTint="@color/neutral_950"
            app:layout_constraintEnd_toEndOf="@+id/div2"
            app:layout_constraintStart_toStartOf="@+id/div1"
            app:layout_constraintTop_toBottomOf="@+id/tv_sign_up"
            app:strokeColor="@color/primary_500" />

        <LinearLayout
            android:id="@+id/linear_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/btn_register_google"
            app:layout_constraintStart_toStartOf="@id/btn_register_google"
            app:layout_constraintTop_toBottomOf="@id/btn_register_google">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_spa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:padding="4dp"
                android:text="@string/sudah_punya_akun"
                android:textSize="12sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:padding="4dp"
                android:text="@string/login"
                android:textColor="@color/primary_500"
                android:textSize="12sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>